--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lorenzo Durante | Portfolio</title>
+    <title>Lolo Durante | Portafolio</title>
+    <meta name="description" content="Portafolio de Lorenzo 'Lolo' Durante, desarrollador Front End disponibla para trabajos freelance.">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
@@ -13,12 +15,12 @@
     <NAV></NAV>
     <div class="landingPage">
         <div class="titulo">
-            <div>Hola,<br>soy Lolo Durante.</div>
+            <h1>Hola,<br>soy Lolo Durante.</h1>
         </div>
-        <h2 class="subtitulo">Desarrollador Front End de Buenos Aires. Actualmente trabajo en Coderhouse como tutor de Desarrollo web. <br>
-            <div class="redes"><a href="">Instagram</a> <a href="">Twitter</a> <a href="">Github</a></div>
+        <h2 class="subtitulo">Desarrollador Front End de Buenos Aires. Actualmente trabajo en Coderhouse como tutor de Desarrollo web.-Pagina en desarrollo-<br>
+            <div class="redes"><a href="https://www.instagram.com/asfvbrddgh/" target="_blank">Instagram</a> <a target="_blank" href="https://twitter.com/LorenzoDurantee">Twitter</a> <a target="_blank" href="https://github.com/loleiii">Github</a></div>
         </h2>
-        <img src="./img/flecha.svg" alt="">
+        <img src="./img/flecha.svg" alt="Flecha para indicar direccion">
 
     </div>
     <div class="titulos">Trabajos</div>
@@ -35,7 +37,7 @@
 
         </div>
         <div class="imagen">
-            <img src="./img/screen-capture.gif" target="_blank" alt="Primer GIF de pagina greenday.com.ar">
+            <img src="./img/screen-capture.gif" target="_blank" alt="Primer GIF de pagina freelance greenday.com.ar">
         </div>
     </div>
 
@@ -46,16 +48,16 @@
                 02/GV COACH
             </div>
             <div class="descripcion">
-                Diseño y desarrollo web para la aplicacion de compras ecofriendly en Argentina
+                Diseño y desarrollo para GV coach una pagina <br> para recordar a familiares con login y contraseña.
             </div>
-            <p>Desarrolado durante Mayo/Junio 2021</p>
+            <p>Desarrolado durante Enero 2021</p>
             <div class="imagen">
                 <a href="http://gvcoach.com/" target="_blank" class="link">Conoce el proyecto ↗</a>
             </div>
 
         </div>
         <div class="imagen">
-            <img src="./img/gvcoach.png" alt="">
+            <img src="./img/gvcoach.png" alt="Screenshot de proyecto freelance 2 para GV coach">
         </div>
     </div>
 
@@ -66,13 +68,13 @@
                 03/LORI SALAS
             </div>
             <div class="descripcion">
-                Diseño y desarrollo web para la aplicacion de compras ecofriendly en Argentina
+                Diseño y desarrollo web en Wordpress con forms <br> de contacto , blog y "freebies".
             </div>
             <p>Desarrolado durante Mayo/Junio 2021</p>
-            <a href="" class="link">Conoce el proyecto ↗</a>
+            <a href="www.lorisalas.com" class="link">Conoce el proyecto ↗</a>
         </div>
         <div class="imagen">
-            <img src="./img/rectangulo.png" alt="">
+            <img src="./img/Screenshot.png" alt="Screenshot de pagina freelance lorisalas.com ">
         </div>
     </div>
     <a href="https://github.com/loleiii" target="_blank" class="linkFinal">Todos los proyectos ↗</a>
@@ -81,7 +83,7 @@
         <div class="sobremiTitulo">
             Conocimientos y certificados
         </div>
-        <div class="item">Carrera desarrollo Front End en <a href="coderhouse.com" target="_blank">Coderhouse.</a></div>
+        <div class="item">Carrera desarrollo Front End en <a href="www.coderhouse.com" target="_blank">Coderhouse.</a></div>
         <p>Carrera de desarrollo Front End con una duracion de 100 horas. Se vio diseño web y sus mejores practicas ,trabajando con HTML y CSS. Tambien se vio programación con Javascript y React Js ideales para sitios web mas complejos , dinamicos y escalables.</p>
         <div class="item">C1 Advanced Cambridge certificate of English.</a></div>
         <p>Noviembre 2019 </p>
@@ -98,6 +100,24 @@
         <div class="item">Freelancer en desarrollo web.</div>
         <p>Noviembre 2020 - Julio 2021</p>
     </div>
+
+    <footer>
+        <div>Lolo Durante 2021.</div>
+        <div>
+            <a href="https://www.instagram.com/asfvbrddgh/" target="_blank">Instagram</a> <a target="_blank" href="https://twitter.com/LorenzoDurantee">Twitter</a> <a target="_blank" href="https://github.com/loleiii">Github</a>
+        </div>
+    </footer>
+
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+              ScrollReveal().reveal('div');
+    window.addEventListener('load',function(){
+  document.querySelector('body').classList.add("loaded")  
+});
+    </script>
     <script src="./index.js"></script>
+    </script>
+
 </body>
 </html>
