--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="trabajos">
         <div class="trabajo">
             <div class="tituloTrabajos">
-                02/GV COACH
+                02-GV COACH
             </div>
             <div class="descripcion">
                 Diseño y desarrollo para GV coach una pagina <br> para recordar a familiares con login y contraseña.
@@ -65,7 +65,7 @@
     <div class="trabajos">
         <div class="trabajo">
             <div class="tituloTrabajos">
-                03/LORI SALAS
+                03-LORI SALAS
             </div>
             <div class="descripcion">
                 Diseño y desarrollo web en Wordpress con forms <br> de contacto , blog y "freebies".
@@ -84,7 +84,7 @@
             Conocimientos y certificados
         </div>
         <div class="item">Carrera desarrollo Front End en <a href="www.coderhouse.com" target="_blank">Coderhouse.</a></div>
-        <p>Carrera de desarrollo Front End con una duracion de 100 horas. Se vio diseño web y sus mejores practicas ,trabajando con HTML y CSS. Tambien se vio programación con Javascript y React Js ideales para sitios web mas complejos , dinamicos y escalables.</p>
+        <p>Carrera de desarrollo Front End con una duracion de 100 horas. Se vio diseño web y sus mejores practicas ,trabajando con HTML y CSS. <br> Tambien se vio programación con Javascript y React Js ideales para sitios web mas complejos , dinamicos y escalables.</p>
         <div class="item">C1 Advanced Cambridge certificate of English.</a></div>
         <p>Noviembre 2019 </p>
         <div class="item">Programación con Python. </div>
