--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@
             <a href="https://www.instagram.com/asfvbrddgh/" target="_blank">Instagram</a> <a target="_blank" href="https://twitter.com/LorenzoDurantee">Twitter</a> <a target="_blank" href="https://github.com/loleiii">Github</a>
         </div>
     </footer>
-
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+              ScrollReveal().reveal('div');
+    window.addEventListener('load',function(){
+  document.querySelector('body').classList.add("loaded")  
+});
+    </script>
+    <script src="./index.js"></script>
+    </script>
 
 </body>
 </html>
