--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 Diseño y desarrollo web en Wordpress con forms <br> de contacto , blog y "freebies".
             </div>
             <p>Desarrolado durante Mayo/Junio 2021</p>
-            <a href="www.lorisalas.com" class="link">Conoce el proyecto ↗</a>
+            <a href="https://lorisalas.com/" class="link">Conoce el proyecto ↗</a>
         </div>
         <div class="imagen">
             <img src="./img/Screenshot.png" alt="Screenshot de pagina freelance lorisalas.com ">
@@ -83,7 +83,7 @@
         <div class="sobremiTitulo">
             Conocimientos y certificados
         </div>
-        <div class="item">Carrera desarrollo Front End en <a href="www.coderhouse.com" target="_blank">Coderhouse.</a></div>
+        <div class="item">Carrera desarrollo Front End en <a href="https://www.coderhouse.com/online/carrera-online-desarrollo-frontend" target="_blank">Coderhouse.</a></div>
         <p>Carrera de desarrollo Front End con una duracion de 100 horas. Se vio diseño web y sus mejores practicas ,trabajando con HTML y CSS. <br> Tambien se vio programación con Javascript y React Js ideales para sitios web mas complejos , dinamicos y escalables.</p>
         <div class="item">C1 Advanced Cambridge certificate of English.</a></div>
         <p>Noviembre 2019 </p>
