--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <NAV></NAV>
+    <nav>
+        
+    </nav>
     <div class="landingPage">
         <div class="titulo">
             <h1>Hola,<br>soy Lolo Durante.</h1>
@@ -107,6 +109,7 @@
             <a href="https://www.instagram.com/asfvbrddgh/" target="_blank">Instagram</a> <a target="_blank" href="https://twitter.com/LorenzoDurantee">Twitter</a> <a target="_blank" href="https://github.com/loleiii">Github</a>
         </div>
     </footer>
+    <script src="./js/index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script>
               ScrollReveal().reveal('div');
@@ -115,6 +118,6 @@
 });
     </script>
 
-
+<script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "ffe4a9d42321fe9a413a8d0d522eb813d8f9ae38e0e974a8a6740152071483ad", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 </body>
 </html>
