--- a/pages/clicker.html
+++ b/pages/clicker.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/toDo.css">
+    <link rel="stylesheet" href="../css/clicker.css">
 </head>
 <body>
-    <div class="container">
-        
-    </div>
-    <script src="../js/toDo.js"></script>
+    <button id="poke">
+        <div id="counter">0</div>
+    </button>
+
+
+    
+    <script defer src="../js/clicker.js"></script>
 </body>
 </html>
