--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <h2 class="subtitulo">Desarrollador Front End de Buenos Aires. Actualmente trabajo en Coderhouse como tutor de Desarrollo web.-Pagina en desarrollo-<br>
             <div class="redes"><a href="https://www.instagram.com/asfvbrddgh/" target="_blank">Instagram</a> <a target="_blank" href="https://twitter.com/LorenzoDurantee">Twitter</a> <a target="_blank" href="https://github.com/loleiii">Github</a></div>
         </h2>
-        <img src="./img/flecha.svg" alt="Flecha para indicar direccion">
+        <a href="#trabajos"><img src="./img/flecha.svg" alt="Flecha para indicar direccion"></a>
 
     </div>
-    <div class="titulos">Trabajos</div>
+    <div class="titulos" id="trabajos">Trabajos</div>
     <div class="trabajos">
         <div class="trabajo">
             <div class="tituloTrabajos">
